prevent build context path to escape source code directory
The build pipeline now validates that the CONTEXT parameter points to a location within the SOURCE_CODE directory.

It checks that the CONTEXT doesn't escape from SOURCE_CODE directory, otherwise the build fails at the early stage.
If the CONTEXT is empty, the check sets it to '.' (current directory).

Previously, the script did not check the provided path.
This could lead the build process to use a context in a way it shouldn't, causing (possibly security) issues.
This change ensures the build context is always within its intended scope, making our builds more reliable and predictable.

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
+++ b/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
@@ -144,6 +144,28 @@ spec:
         set -eu
         set -o pipefail
 
+        echo "[$(date --utc -Ins)] Validate context path"
+
+        if [ -z "$CONTEXT" ]; then
+          echo "WARNING: CONTEXT is empty. Defaulting to '.' (the source directory)." >&2
+          CONTEXT="."
+        fi
+
+        source_dir_path=$(realpath "$SOURCE_CODE_DIR")
+        context_dir_path=$(realpath "$SOURCE_CODE_DIR/$CONTEXT")
+
+        case "$context_dir_path" in
+          "$source_dir_path" | "$source_dir_path/"*)
+            # path is valid, do nothing
+            ;;
+          *)
+            echo "ERROR: The CONTEXT parameter ('$CONTEXT') is invalid because it escapes the source directory." >&2
+            echo "Source path: $source_dir_path" >&2
+            echo "Resolved path: $context_dir_path" >&2
+            exit 1
+            ;;
+        esac
+
         echo "Step 1 :: Configure SSH and rsync folders from tekton to the VM"
         mkdir -p ~/.ssh
         if [ -e "/ssh/error" ]; then
