--- a/renovate.json
+++ b/renovate.json
@@ -137,6 +137,16 @@
       "automerge": true
     },
     {
+      "groupName": "go-modules",
+      "matchManagers": [
+        "gomod"
+      ],
+      "schedule": [
+        "on sunday"
+      ],
+      "automerge": true
+    },
+    {
       "matchPackageNames": [
         "quay.io/konflux-ci/clamav-db"
       ],
