feat(ISV-5866): Use Mobster to generate oci image SBOMs
A Mobster is a unified tool for generating SBOMs in Konflux. The oci
image is another content type that is being ported to use Mobster.

A Mobster handles a logic of previously defined scripts and unifies the
output across all SBOMs produced by the SBOM.

The oci-image generator executes following steps internally:
- merge syft and hermeto outputs
- add reference to the image and updates relationship
- add base images used to build an image
- add additional base images
- validate a format of the spdx or cyclonedx schema

JIRA: ISV-5866

Signed-off-by: Ales Raszka <araszka@redhat.com>

--- a/task/source-build-oci-ta/0.3/source-build-oci-ta.yaml
+++ b/task/source-build-oci-ta/0.3/source-build-oci-ta.yaml
@@ -142,17 +142,24 @@ spec:
                 .formulation[]?
                 | .components[]?
                 | select(any(.properties[]?; .name == "konflux:container:is_base_image"))
-                | (.purl | capture("^pkg:oci/.*?@(?<digest>.*?:[a-f0-9]*)")) as $matched
-                | .name + "@" + $matched.digest
+                | (
+                    .purl
+                    | capture("^pkg:oci/.*?@(?<digest>[a-z0-9]+:[a-f0-9]+)(?:\\?[^#]*repository_url=(?<repository_url>[^&#]*))?")
+                  ) as $matched
+                | $matched.repository_url + "@" + $matched.digest
             ' <<<"$sbom" | tee "$BASE_IMAGES_FILE"
         else
           echo ' (a package with a {"name": "konflux:container:is_base_image"} JSON-encoded annotation)'
           jq -r '
-                .packages[]
-                | select(any(.annotations[]?.comment; (fromjson?).name? == "konflux:container:is_base_image"))
-                | [.externalRefs[]? | select(.referenceType == "purl").referenceLocator] as $purls
-                | ($purls | first | capture("^pkg:oci/.*?@(?<digest>.*?:[a-f0-9]*)")) as $matched
-                | .name + "@" + $matched.digest
+                  .packages[]
+                  | select(any(.annotations[]?.comment; (fromjson?).name? == "konflux:container:is_base_image"))
+                  | [.externalRefs[]? | select(.referenceType == "purl").referenceLocator] as $purls
+                  | (
+                      $purls | first
+                      | capture("^pkg:oci/.*?@(?<digest>[a-z0-9]+:[a-f0-9]+)(?:\\?[^#]*repository_url=(?<repository_url>[^&#]*))?")
+                    ) as $matched
+                  | $matched.repository_url + "@" + $matched.digest
+
             ' <<<"$sbom" | tee "$BASE_IMAGES_FILE"
         fi
     - name: build
