--- a/task/deprecated-image-check/0.5/deprecated-image-check.yaml
+++ b/task/deprecated-image-check/0.5/deprecated-image-check.yaml
@@ -96,11 +96,20 @@ spec:
                     .formulation[]?
                     | .components[]?
                     | select(any(.properties[]?; .name | test("^konflux:container:is_(base|builder)_image")))
-                    | .name
+                    | (
+                        .purl
+                        | capture("^pkg:oci/.*?@(?<digest>[a-z0-9]+:[a-f0-9]+)(?:\\?[^#]*repository_url=(?<repository_url>[^&#]*))?")
+                      ) as $matched
+                    | $matched.repository_url
                 else
                     .packages[]
                     | select(any(.annotations[]?.comment; (fromjson?).name? | test("^konflux:container:is_(base|builder)_image")?))
-                    | .name
+                    | [.externalRefs[]? | select(.referenceType == "purl").referenceLocator] as $purls
+                    | (
+                        $purls | first
+                        | capture("^pkg:oci/.*?@(?<digest>[a-z0-9]+:[a-f0-9]+)(?:\\?[^#]*repository_url=(?<repository_url>[^&#]*))?")
+                      ) as $matched
+                    | $matched.repository_url
                 end
             ' >> "${IMAGES_TO_BE_PROCESSED_PATH}"
             echo "Detected base images from $arch SBOM:"
