--- a/renovate.json
+++ b/renovate.json
@@ -41,6 +41,7 @@
         "task/apply-tags/**",
         "task/build-image-index/**",
         "task/build-image-manifest/**",
+        "task/build-paketo-builder-oci-ta/**",
         "task/buildah-min/**",
         "task/buildah-oci-ta/**",
         "task/buildah-remote-oci-ta/**",
@@ -206,12 +207,6 @@
         "task/rpms-signature-scan/**"
       ],
       "enabled": false
-    },
-    {
-      "groupName": "buildpack",
-      "matchFileNames": [
-        "task/build-paketo-builder-oci-ta/**"
-      ]
     },
     {
       "groupName": "sealights",
