--- a/policies/step-actions.yaml
+++ b/policies/step-actions.yaml
@@ -19,6 +19,7 @@ sources:
         - step_images.step_images_accessible:quay.io/redhat-services-prod/sast/coverity:202412.7
         - step_images.step_images_accessible:quay.io/redhat-services-prod/sast/coverity:202503.0
         - step_images.step_images_accessible:quay.io/redhat-services-prod/sast/coverity:202503.1
+        - step_images.step_images_accessible:quay.io/redhat-services-prod/sast/coverity:202503.2
         - step_images.step_images_accessible:registry.access.redhat.com/ubi8/nodejs-$(params.nodejs-version):latest
         - step_images.step_images_accessible:registry.access.redhat.com/ubi8/python-$(params.python-version):latest
         - step_images.step_images_accessible:registry.access.redhat.com/ubi8/go-toolset:$(params.go-version)
